tests/snapshots/tests__pre_reduce_run@machine_u32__num_add.hvmc.snap
---
source: tests/tests.rs
expression: output
input_file: examples/machine_u32/num_add.hvmc
---
#223
pre-reduce:
RWTS   :               6
- ANNI :               2
- COMM :               0
- ERAS :               0
- DREF :               3
- OPER :               1
run:
RWTS   :               0
- ANNI :               0
- COMM :               0
- ERAS :               0
- DREF :               0
- OPER :               0
